# llama.cpp

tools/: CMakeLists.txt
tools/mtmd/: mtmd-helper.cpp  mtmd.cpp  mtmd.h
tools/server/: server-common.cpp  server-common.h
tools/vision-encoder-server/: CMakeLists.txt  main.cpp
